--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "upload",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Upload files to my custom server",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "test",
-    "start": "npx nodemon app.js"
+    "start": "node index.js",
+    "dev": "npx nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -15,6 +15,7 @@
   "author": "cyberwizdev",
   "license": "ISC",
   "dependencies": {
+    "basic-ftp": "^5.0.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
