--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "start": "node api/index.js",
-    "dev": "nodemon api/index.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -15,10 +15,12 @@
   "author": "cyberwizdev",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.9.0",
     "basic-ftp": "^5.0.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "form-data": "^4.0.2",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7"
   },
