--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,32 @@
 version: '3.8'
 
 services:
-  app:
-    build: .
+  nginx: # Nginx service
+    image: nginx:1.25.1
     ports:
       - "80:80"
+      - "443:443"
     volumes:
-      - ./uploads:/usr/src/app/uploads # Mount the uploads directory
+      - /etc/letsencrypt/live/upload.cyberwizdev.com.ng/fullchain.pem:/etc/nginx/ssl/fullchain.pem:ro
+      - /etc/letsencrypt/live/upload.cyberwizdev.com.ng/privkey.pem:/etc/nginx/ssl/privkey.pem:ro
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - app # Nginx depends on your app service
+    restart: always
+  app: # Your Node.js application service
+    build: .
+    ports:
+      - "8080:8080" # Expose on a different port internally
+    volumes:
+      - ./uploads:/usr/src/app/uploads
     environment:
-      - PORT=${PORT}
+      - PORT=8080 # Make sure your app listens on port 8080 inside the container
       - API_KEY=${API_KEY}
       - NODE_ENV=${NODE_ENV}
+    # Add a healthcheck
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
