Updates SSL certificate paths
Updates the paths to the SSL certificate files in the Docker Compose configuration. This change reflects a likely renewal or re-issuance of the SSL certificate, where the new certificate files are stored in a directory with a "-0001" suffix. This ensures that the Nginx service uses the correct and up-to-date SSL certificates for secure communication.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
       - "8000:80"
       - "8444:443"
     volumes:
-      - /etc/letsencrypt/live/upload.cyberwizdev.com.ng/fullchain.pem:/etc/nginx/ssl/fullchain.pem:ro
-      - /etc/letsencrypt/live/upload.cyberwizdev.com.ng/privkey.pem:/etc/nginx/ssl/privkey.pem:ro
+      - /etc/letsencrypt/live/upload.cyberwizdev.com.ng-0001/fullchain.pem:/etc/nginx/ssl/fullchain.pem:ro
+      - /etc/letsencrypt/live/upload.cyberwizdev.com.ng-0001/privkey.pem:/etc/nginx/ssl/privkey.pem:ro
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - app # Nginx depends on your app service
