--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,18 @@
 services:
-  nginx: # Nginx service
-    image: nginx:1.25.1
-    ports:
-      - "8000:80"
-      - "8444:443"
-    volumes:
-      - /etc/letsencrypt/live/upload.cyberwizdev.com.ng-0001/fullchain.pem:/etc/nginx/ssl/fullchain.pem:ro
-      - /etc/letsencrypt/live/upload.cyberwizdev.com.ng-0001/privkey.pem:/etc/nginx/ssl/privkey.pem:ro
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - app # Nginx depends on your app service
-    restart: always
   app: # Your Node.js application service
     build: .
     ports:
-      - "8080:8080" # Expose on a different port internally
+      - "80:8080" # Map host port 80 to container port 8080
+                  # This means external requests to host:80 will go to app-container:8080
     volumes:
       - ./uploads:/usr/src/app/uploads
+      - ./temp_uploads:/usr/src/app/temp_uploads # Ensure temp_uploads is also persistent/mounted
     environment:
-      - PORT=8080 # Make sure your app listens on port 8080 inside the container
+      - PORT=8080 # Your app listens on 8080 inside the container
       - API_KEY=${API_KEY}
       - NODE_ENV=${NODE_ENV}
-    # Add a healthcheck
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080"]
       interval: 30s
       timeout: 10s
       retries: 3
-
